added UI mapper, changed according to new DB layout
